clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr113787.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr113787.c" (c, x86_64-unknown-linux-gnu)
global __const.main.a : s32i[3] = [1, 2, 3] [cir_private, default, dso_local, constant]

fn foo(%arg9: s32i, %arg10: s32i, %arg11: s32i, %arg12: s32i, %arg13: s32i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg9: s32i, %arg10: s32i, %arg11: s32i, %arg12: s32i, %arg13: s32i*):
        %84 = alloca s32i, "x", align 4
        %85 = alloca s32i, "y", align 4
        %86 = alloca s32i, "z", align 4
        %87 = alloca s32i, "d", align 4
        %88 = alloca s32i*, "buf", align 8
        store %arg9, %84
        store %arg10, %85
        store %arg11, %86
        store %arg12, %87
        store %arg13, %88
        scope {
            %89 = alloca s32i, "i", align 4
            %90 = load %86 : s32i, align 4
            store %90, %89, align 4
            for cond: {
                %127 = load %89 : s32i, align 4
                %128 = load %85 : s32i, align 4
                %129 = load %86 : s32i, align 4
                %130 = sub %128, %129 : s32i [nsw]
                %131 = cmp lt %127, %130 : bool
                condition %131
            } step: {
                %91 = load %89 : s32i, align 4
                %92 = inc %91 : s32i [nsw]
                store %92, %89, align 4
                yield
            } do {
                scope {
                    %93 = alloca s32i, "j", align 4
                    %94 = const 0 : s32i
                    store %94, %93, align 4
                    for cond: {
                        %124 = load %93 : s32i, align 4
                        %125 = load %87 : s32i, align 4
                        %126 = cmp lt %124, %125 : bool
                        condition %126
                    } step: {
                        %95 = load %93 : s32i, align 4
                        %96 = inc %95 : s32i [nsw]
                        store %96, %93, align 4
                        yield
                    } do {
                        %97 = load %89 : s32i, align 4
                        %98 = load %84 : s32i, align 4
                        %99 = mul %97, %98 : s32i [nsw]
                        %100 = load %84 : s32i, align 4
                        %101 = load %86 : s32i, align 4
                        %102 = sub %100, %101 : s32i [nsw]
                        %103 = const 1 : s32i
                        %104 = sub %102, %103 : s32i [nsw]
                        %105 = load %93 : s32i, align 4
                        %106 = sub %104, %105 : s32i [nsw]
                        %107 = add %99, %106 : s32i [nsw]
                        %108 = cast(integral) %107 : s64i
                        %109 = load %88 : s32i*, align 8
                        %110 = ptr_stride %109, %108 : s32i*
                        %111 = load %110 : s32i, align 4
                        %112 = load %89 : s32i, align 4
                        %113 = load %84 : s32i, align 4
                        %114 = mul %112, %113 : s32i [nsw]
                        %115 = load %84 : s32i, align 4
                        %116 = load %86 : s32i, align 4
                        %117 = sub %115, %116 : s32i [nsw]
                        %118 = load %93 : s32i, align 4
                        %119 = add %117, %118 : s32i [nsw]
                        %120 = add %114, %119 : s32i [nsw]
                        %121 = cast(integral) %120 : s64i
                        %122 = load %88 : s32i*, align 8
                        %123 = ptr_stride %122, %121 : s32i*
                        store %111, %123, align 4
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        return
}
fn bar(%arg4: s32i, %arg5: s32i, %arg6: s32i, %arg7: s32i, %arg8: s32i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: s32i, %arg5: s32i, %arg6: s32i, %arg7: s32i, %arg8: s32i*):
        %36 = alloca s32i, "x", align 4
        %37 = alloca s32i, "y", align 4
        %38 = alloca s32i, "z", align 4
        %39 = alloca s32i, "d", align 4
        %40 = alloca s32i*, "buf", align 8
        store %arg4, %36
        store %arg5, %37
        store %arg6, %38
        store %arg7, %39
        store %arg8, %40
        scope {
            %41 = alloca s32i, "i", align 4
            %42 = const 0 : s32i
            store %42, %41, align 4
            for cond: {
                %81 = load %41 : s32i, align 4
                %82 = load %39 : s32i, align 4
                %83 = cmp lt %81, %82 : bool
                condition %83
            } step: {
                %43 = load %41 : s32i, align 4
                %44 = inc %43 : s32i [nsw]
                store %44, %41, align 4
                yield
            } do {
                scope {
                    %45 = alloca s32i, "j", align 4
                    %46 = load %38 : s32i, align 4
                    store %46, %45, align 4
                    for cond: {
                        %76 = load %45 : s32i, align 4
                        %77 = load %36 : s32i, align 4
                        %78 = load %38 : s32i, align 4
                        %79 = sub %77, %78 : s32i [nsw]
                        %80 = cmp lt %76, %79 : bool
                        condition %80
                    } step: {
                        %47 = load %45 : s32i, align 4
                        %48 = inc %47 : s32i [nsw]
                        store %48, %45, align 4
                        yield
                    } do {
                        %49 = load %45 : s32i, align 4
                        %50 = load %37 : s32i, align 4
                        %51 = load %38 : s32i, align 4
                        %52 = sub %50, %51 : s32i [nsw]
                        %53 = const 1 : s32i
                        %54 = sub %52, %53 : s32i [nsw]
                        %55 = load %41 : s32i, align 4
                        %56 = sub %54, %55 : s32i [nsw]
                        %57 = load %36 : s32i, align 4
                        %58 = mul %56, %57 : s32i [nsw]
                        %59 = add %49, %58 : s32i [nsw]
                        %60 = cast(integral) %59 : s64i
                        %61 = load %40 : s32i*, align 8
                        %62 = ptr_stride %61, %60 : s32i*
                        %63 = load %62 : s32i, align 4
                        %64 = load %45 : s32i, align 4
                        %65 = load %37 : s32i, align 4
                        %66 = load %38 : s32i, align 4
                        %67 = sub %65, %66 : s32i [nsw]
                        %68 = load %41 : s32i, align 4
                        %69 = add %67, %68 : s32i [nsw]
                        %70 = load %36 : s32i, align 4
                        %71 = mul %69, %70 : s32i [nsw]
                        %72 = add %64, %71 : s32i [nsw]
                        %73 = cast(integral) %72 : s64i
                        %74 = load %40 : s32i*, align 8
                        %75 = ptr_stride %74, %73 : s32i*
                        store %63, %75, align 4
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        return
}
fn baz(%arg0: s32i, %arg1: s32i, %arg2: s32i, %arg3: s32i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i, %arg2: s32i, %arg3: s32i*):
        %22 = alloca s32i, "x", align 4
        %23 = alloca s32i, "y", align 4
        %24 = alloca s32i, "d", align 4
        %25 = alloca s32i*, "buf", align 8
        store %arg0, %22
        store %arg1, %23
        store %arg2, %24
        store %arg3, %25
        %26 = load %22 : s32i, align 4
        %27 = load %23 : s32i, align 4
        %28 = const 0 : s32i
        %29 = load %24 : s32i, align 4
        %30 = load %25 : s32i*, align 8
        call @foo(%26, %27, %28, %29, %30) [all]
        %31 = load %22 : s32i, align 4
        %32 = load %23 : s32i, align 4
        %33 = const 0 : s32i
        %34 = load %24 : s32i, align 4
        %35 = load %25 : s32i*, align 8
        call @bar(%31, %32, %33, %34, %35) [all]
        return
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i[3], "a", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @__const.main.a : s32i[3]*
    copy %1, %3
    %4 = const 1 : s32i
    %5 = const 2 : s32i
    %6 = const 1 : s32i
    %7 = cast(array_to_ptrdecay) %1 : s32i*
    call @baz(%4, %5, %6, %7) [all]
    scope {
        %9 = alloca s32i, "i", align 4
        %10 = const 0 : s32i
        store %10, %9, align 4
        for cond: {
            %19 = load %9 : s32i, align 4
            %20 = const 3 : s32i
            %21 = cmp lt %19, %20 : bool
            condition %21
        } step: {
            %11 = load %9 : s32i, align 4
            %12 = inc %11 : s32i [nsw]
            store %12, %9, align 4
            yield
        } do {
            scope {
                %13 = load %9 : s32i, align 4
                %14 = cast(integral) %13 : s64i
                %15 = get_element %1[%14] : s32i*
                %16 = load %15 : s32i, align 4
                %17 = const 1 : s32i
                %18 = cmp ne %16, %17 : bool
                if %18 {
                    call @abort() [all]
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %8 = load %0 : s32i
    return %8
}
